tests/fixtures/invalid/divmod_dict_set.py
# Cannot call divmod() with Dict[str, int], Set[int]
x = divmod({"a": 1}, {1, 2, 3})
